    regular TouchEnd and abrupt touch sequence cancellations caused by
    the compositor, for example when a system gesture gets recognized.

- QMetaType

  * Q_DECLARE_METATYPE(Foo*) now requires that Foo is fully defined. In
    cases where a forward declared type should be used as a metatype,
    Q_DECLARE_OPAQUE_POINTER(Foo*) can be used to allow that.

- QItemEditorFactory

  * The signature of the createEditor and valuePropertyName methods
    have been changed to take arguments of type int instead of QVariant::Type.

- QWindowSystemInterface:

  * The signature of all handleTouchEvent() variants have changed,
    taking a QTouchDevice* instead of just a DeviceType value.
    Platform or generic plug-ins have to create and register at least
    one QTouchDevice before sending the first touch event.

  * The event type parameter is removed from handleTouchEvent().

- The previously exported function qt_translateRawTouchEvent() has been removed.
  Use QWindowSystemInterface::handleTouchEvent() instead.

- QAbstractEventDispatcher

  * The signature for the pure-virtual registerTimer() has changed. Subclasses
  of QAbstractEventDispatcher will need to be updated to reimplement the new
  pure-virtual 'virtual void registerTimer(int timerId, int interval,
  Qt::TimerType timerType, QObject *object) = 0;'

  * QAbstractEventDispatcher::TimerInfo is no longer a QPair<int, int>. It is
  now a struct with 3 members: struct TimerInfo { int timerId; int interval;
  Qt::TimerType timerType; }; Reimplementations of
  QAbstractEventDispatcher::registeredTimers() will need to be updated to pass
  3 arguments to the TimerInfo constructor (instead of 2).

- QUuid

  * Removed implicit conversion operator QUuid::operator QString(), instead
  QUuid::toString() function should be used.

- The QHttp, QHttpHeader, QHttpResponseHeader and QHttpRequestHeader classes have
  been removed, QNetworkAccessManager should be used instead.
